<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/com_facebook_button_login_silver_background_color_pressed"
    tools:context="hr.foi.vodickulturnihdogadanja.activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70sp"
        android:alpha="0.42"
        app:srcCompat="@drawable/logo" />


    <TextView
        android:id="@+id/login_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/text_login"
        android:textColor="@color/cardview_dark_background"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/log_username_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/username"
        android:textColor="@color/cardview_dark_background"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/log_username_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/log_username_tw"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorLink="@color/colorPrimary" />

    <TextView
        android:id="@+id/log_password_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/log_username_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34sp"
        android:text="@string/password"
        android:textColor="@color/cardview_dark_background"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/log_password_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/log_username_et"
        android:layout_below="@+id/log_password_tw"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorLink="@color/colorPrimary" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150sp"
        android:layout_height="55sp"
        android:layout_below="@+id/log_password_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="@color/cardview_light_background" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="130sp"
        android:layout_height="45sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:background="@color/colorPrimary"
        android:text="@string/registration"
        android:textColor="@color/cardview_light_background" />

</RelativeLayout>
