<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vz1"
    android:scrollbarAlwaysDrawHorizontalTrack="false"
    android:scrollbarAlwaysDrawVerticalTrack="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/event_details_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="-5dp"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/event_details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/favoriteCheckBox"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/event_details_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_details_name"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:text="@string/description"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

        <TextView
            android:id="@+id/event_details_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_details_description"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/begin"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/event_details_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_details_description"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/event_details_begin"
            android:layout_weight="1"
            android:text="@string/end"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    <TextView
        android:id="@+id/event_details_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_details_begin"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/location"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/event_details_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_details_location"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/price"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/favoriteCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/event_details_img"
        style="?android:attr/starStyle"/>

    <Button
        android:id="@+id/btn_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_details_price"
        android:layout_marginLeft="15dp"
        android:text="@string/link" />

    <ImageButton
        android:id="@+id/btn_share"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignEnd="@+id/event_details_img"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="9dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/facebook_icon" />

    <ImageButton
        android:id="@+id/btn_twitter"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/btn_share"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/twitter_icon" />

    <ImageButton
        android:id="@+id/img_dislike"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/event_details_img"
        android:layout_below="@id/btn_link"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/dislike_icon" />

    <ImageButton
        android:id="@+id/img_like"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/btn_link"
        android:layout_toEndOf="@+id/img_dislike"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/like_icon" />
    </RelativeLayout>
</ScrollView>
