<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vz1"
    tools:context="hr.foi.vodickulturnihdogadanja.activity.RegistrationActivity">

    <TextView
        android:id="@+id/reg_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="79dp"
        android:layout_marginTop="25dp"
        android:text="@string/text_registration"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/reg_username_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/reg_username_tw"
        android:layout_below="@+id/reg_username_tw"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/cardview_dark_background"
        android:textColorLink="@color/colorPrimary" />


    <TextView
        android:id="@+id/reg_username_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/reg_tw"
        android:layout_below="@+id/reg_tw"
        android:layout_marginTop="22dp"
        android:text="@string/username"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/reg_password_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/reg_username_et"
        android:layout_below="@+id/reg_username_et"
        android:layout_marginTop="17dp"
        android:text="@string/password"
        android:textColor="@android:color/background_dark" />

    <EditText
        android:id="@+id/reg_password_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/reg_password_tw"
        android:layout_below="@+id/reg_password_tw"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorLink="@color/colorPrimary" />

    <TextView
        android:id="@+id/reg_email_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/reg_password_et"
        android:layout_below="@+id/reg_password_et"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textColor="@android:color/background_dark" />

    <EditText
        android:id="@+id/reg_email_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/reg_email_tw"
        android:layout_below="@+id/reg_email_tw"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorLink="@color/colorPrimary" />

    <TextView
        android:id="@+id/reg_name_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/reg_email_et"
        android:layout_below="@+id/reg_email_et"
        android:layout_marginTop="12dp"
        android:text="@string/name"
        android:textColor="@android:color/background_dark" />

    <EditText
        android:id="@+id/reg_name_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/reg_name_tw"
        android:layout_below="@+id/reg_name_tw"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorLink="@color/colorPrimary" />

    <TextView
        android:id="@+id/reg_surname_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/reg_name_et"
        android:layout_below="@+id/reg_name_et"
        android:layout_marginTop="13dp"
        android:text="@string/surname"
        android:textColor="@android:color/background_dark" />

    <EditText
        android:id="@+id/reg_surname_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/reg_surname_tw"
        android:layout_below="@+id/reg_surname_tw"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorLink="@color/colorPrimary" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_below="@+id/reg_surname_et"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:text="@string/registration"
        android:textColor="@color/cardview_light_background" />
</RelativeLayout>
