<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_com_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="5dp"
    android:background="@android:color/transparent"
    android:clickable="true"
    android:focusable="true"
    card_view:cardBackgroundColor="@android:color/transparent"
    card_view:cardCornerRadius="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/comment_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/user"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/comment_datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:id="@+id/comment_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/comment_user"
            android:layout_marginBottom="1dp"
            android:background="@color/dark_grey" />

        <TextView
            android:id="@+id/comment_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/comment_line"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:background="@color/comment_background"
            android:minHeight="75dp"
            android:text="@string/text"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>
</android.support.v7.widget.CardView>