<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/vz1">


    <ImageButton
        android:id="@+id/img_profile_photo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="43dp"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:textColor="@color/black"
        android:textSize="@dimen/view_text"
        android:textStyle="bold"
        android:text="@string/name" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="@dimen/layout_width_edit_text"
        android:layout_height="@dimen/layout_height_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="225dp"
        android:focusable="false"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_style"
        android:textSize="@dimen/edit_text"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/txt_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:textColor="@color/black"
        android:textSize="@dimen/view_text"
        android:textStyle="bold"
        android:text="@string/surname" />

    <EditText
        android:id="@+id/edit_surname"
        android:layout_width="@dimen/layout_width_edit_text"
        android:layout_height="@dimen/layout_height_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="295dp"
        android:focusable="false"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_style"
        android:textSize="@dimen/edit_text"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="340dp"
        android:textColor="@color/black"
        android:textSize="@dimen/view_text"
        android:textStyle="bold"
        android:text="@string/email" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="@dimen/layout_width_edit_text"
        android:layout_height="@dimen/layout_height_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="365dp"
        android:focusable="false"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_style"
        android:textSize="@dimen/edit_text"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="410dp"
        android:textColor="@color/black"
        android:textSize="@dimen/view_text"
        android:textStyle="bold"
        android:text="@string/username" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="@dimen/layout_width_edit_text"
        android:layout_height="@dimen/layout_height_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="435dp"
        android:focusable="false"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_style"
        android:textSize="@dimen/edit_text"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_edit_profile_data"
        android:layout_width="@dimen/layout_width_edit_text"
        android:layout_height="@dimen/layout_height_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="490dp"
        android:background="@drawable/edit_button_style"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/edit_text"
        android:text="@string/edit"/>

    <!--<TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_alignBaseline="@+id/edit_password"
        android:layout_alignBottom="@+id/edit_password"
        android:layout_alignStart="@+id/txt_email" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="textPassword"
        android:focusable="false"
        android:layout_below="@+id/edit_email"
        android:layout_toEndOf="@+id/txt_surname" />-->
    <include layout="@layout/content_navigation" />
</RelativeLayout>
